deploy: a0abcf786d472374e4bf0b90d1f87f3585078ccd

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,16 @@
 @charset "UTF-8";
+.author__avatar {
+  width: 180px !important;
+  height: auto;
+}
+
+.author__avatar img {
+  width: 180px !important;
+  height: auto;
+  max-width: none !important;
+  border-radius: 50%;
+}
+
 /* ==========================================================================
    Contrast skin
    ========================================================================== */
