--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -29,14 +29,19 @@ layout: default
 
     <div class="page__inner-wrap">
       {% unless page.header.overlay_color or page.header.overlay_image %}
-        <header>
-          {% if page.title -%}
-          <h1 id="page-title" class="page__title" itemprop="headline">
-            <a href="{{ page.url | absolute_url }}" itemprop="url">{{ page.title | markdownify | remove: "<p>" | remove: "</p>" }}</a>
-          </h1>
-          {%- endif %}
-          {% include page__meta.html %}
-        </header>
+      <header>
+        {% if page.category == "post" %}
+        <p class="page__category">Posts</p>
+        {% endif %}
+
+        {% if page.title -%}
+        <h1 id="page-title" class="page__title" itemprop="headline">
+          <a href="{{ page.url | absolute_url }}" itemprop="url">{{ page.title | markdownify | remove: "<p>" | remove: "</p>" }}</a>
+        </h1>
+        {%- endif %}
+        {% include page__meta.html %}
+      </header>
+
       {% endunless %}
 
       <section class="page__content" itemprop="text">
